tests/evaluate/fail/badwhilecondition.src
// While conditions should result in a boolean. This should not evaluate.
main() {
    while (9001) {};
}
